# core

./: .gitignore  pyproject.toml  requirements.txt
src/jupyter_convert_core/: __init__.py  docx_generator.py
src/jupyter_convert_core/parsers/: __init__.py  jupyter.py  markdown.py
src/jupyter_convert_core/types/: Cell.py  Elements.py  Options.py  __init__.py
src/jupyter_convert_core/utils/: add_link.py  table_of_content.py
tests/: test.ipynb  try_parse.py
